; ModuleID = '/home/carl/AnghaBench/skynet/skynet-src/extr_skynet_harbor.c_skynet_harbor_exit.c'
source_filename = "/home/carl/AnghaBench/skynet/skynet-src/extr_skynet_harbor.c_skynet_harbor_exit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.skynet_context = type { i32 }

@REMOTE = common dso_local global %struct.skynet_context* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @skynet_harbor_exit() #0 {
  %1 = alloca %struct.skynet_context*, align 8
  %2 = load %struct.skynet_context*, %struct.skynet_context** @REMOTE, align 8
  store %struct.skynet_context* %2, %struct.skynet_context** %1, align 8
  store %struct.skynet_context* null, %struct.skynet_context** @REMOTE, align 8
  %3 = load %struct.skynet_context*, %struct.skynet_context** %1, align 8
  %4 = icmp ne %struct.skynet_context* %3, null
  br i1 %4, label %5, label %8

5:                                                ; preds = %0
  %6 = load %struct.skynet_context*, %struct.skynet_context** %1, align 8
  %7 = call i32 @skynet_context_release(%struct.skynet_context* %6)
  br label %8

8:                                                ; preds = %5, %0
  ret void
}

declare dso_local i32 @skynet_context_release(%struct.skynet_context*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
